--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta
     name="description"
     content="Factory Nails ofrece servicios de diseño de uñas y tratamientos de belleza, destacándose por su profesionalismo, experiencia, y adaptación a las últimas tendencias."
   />
-  <link rel="apple-touch-icon" href="logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
     rel="stylesheet"
@@ -22,7 +22,7 @@
     href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script&display=swap"
     rel="stylesheet"
   />
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Factory Nails - Resistencia</title>
 </head>
 <body>
